start all selected films